<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonSubmit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ke 5
         yang memuat mengenai pembuatan text "Hello" dengan id "textPutri"
         warna text hitam atau dengan kode #000000 dan ukuran textnya 40sp. -->
    <TextView
        android:id="@+id/textPutri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575"
        tools:ignore="MissingConstraints" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ke 5
         yang memuat mengenai image atau gambar yang telah dimasukkan
         nama idnya "fotoSaya" lalu ukuran lebar gambar 272dp dan
         tingginya 241dp. -->
    <ImageView
        android:id="@+id/fotoSaya"
        android:layout_width="272dp"
        android:layout_height="241dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/pathh"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ke 5
         yang memuat mengenai pembuatan Button atau tombol dengan
         nama id "btnOke". -->
    <Button
        android:id="@+id/btnOke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ooke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        tools:ignore="MissingConstraints" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ke 5
         yang memuat mengenai pembuatan text "Nama : Putri Widya"
         dengan id "textNama" warna text hitam atau dengan kode #000000
         dan ukuran textnya 15sp. -->
    <TextView
        android:id="@+id/textNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_putri_widya"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672"
        tools:ignore="MissingConstraints" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ke 5
         yang memuat mengenai pembuatan text "Nim : 203110035" dengan
         id "textNim" warna text hitam atau dengan kode #000000
         dan ukuran textnya 15sp. -->
    <TextView
        android:id="@+id/textNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim_203110035"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:ignore="MissingConstraints" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ke 5
         yang memuat mengenai pembuatan text "Prodi : RPLA" dengan id
         "textProdi" warna text hitam atau dengan kode #000000 dan
         ukuran textnya 15sp. -->
    <TextView
        android:id="@+id/textProdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prodi_rpla"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>